add MH and mood services